Fixed too small p-margins

--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ p {
     font-family: var(--paragraph-font);
     font-size: var(--paragraph-font-size);
     font-weight: var(--paragraph-font-weight);
-    margin: 0 0.5vw;
+    margin: 0 2vw;
 }
 
 .text-center {
@@ -179,11 +179,6 @@ p {
 }
 
 @media (max-width: 1100px) {
-    p {
-        margin-left: 0;
-        margin-right: 0;
-        overflow-wrap: break-word;
-    }
     .menu {
         display: none;
     }
